name:                bencode-unicode
version:             0
license:             BSD3
license-file:        LICENSE
author:              Matthew Harm Bekkema
maintainer:          mbekkema97@gmail.com
category:            Data

build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/mat8913/bencode-unicode

library
  exposed-modules:     Data.BEncode
                       Data.BEncode.Type
                       Data.BEncode.Class
                       Data.BEncode.BDecodable
                       Data.BEncode.BEncodable

  other-modules:       Data.BEncode.Parser

  build-depends:       base >= 4.6 && < 5
                     , text
                     , bytestring
                     , int-cast

  default-language:    Haskell2010

test-suite test-bencode
  type:                exitcode-stdio-1.0

  main-is:             Tests/Properties.hs

  build-depends:       base >= 4.6 && < 5
                     , QuickCheck
                     , quickcheck-unicode
                     , text
                     , bytestring
                     , int-cast

  default-language:    Haskell2010
